fix: product card overlap problem

--- a/src/components/ProductCard/productCard.css
+++ b/src/components/ProductCard/productCard.css
@@ -7,7 +7,7 @@
   justify-content: space-between;
   border-radius: 10px;
   width: 300px;
-  height: 32.5rem;
+  height: 530px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   padding: 5px;
 }
